--- a/VPSOFullLegend.html
+++ b/VPSOFullLegend.html
@@ -14,7 +14,7 @@
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">AEO - Airport Environs</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">AEO - Airport Environs</div>
 </div>
 <div>
 <div style="display:inline-block">
