--- a/VPSOFullLegend.html
+++ b/VPSOFullLegend.html
@@ -31,7 +31,7 @@
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">BMO - Bushfire Management</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">BMO - Bushfire Management</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -48,7 +48,7 @@
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">CLPO - City Link Project</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">CLPO - City Link Project</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -65,7 +65,7 @@
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">DCPO - Development Contributions Plan</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">DCPO - Development Contributions Plan</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -82,7 +82,7 @@
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">DDO - Design and Development</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">DDO - Design and Development</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -99,7 +99,7 @@
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">DPO - Development Plan</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">DPO - Development Plan</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -112,7 +112,7 @@
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">EAO - Environmental Audit</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">EAO - Environmental Audit</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -125,7 +125,7 @@
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">EMO - Erosion Management</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">EMO - Erosion Management</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -138,7 +138,7 @@
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">ESO - Environmental Significance</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">ESO - Environmental Significance</div>
 </div>
 </div>
 <div style="display:inline-block">
@@ -154,7 +154,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">FO - Floodway</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">FO - Floodway</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -170,7 +170,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">HO - Heritage</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">HO - Heritage</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -192,7 +192,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">ICO - Infrastructure Contributions</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">ICO - Infrastructure Contributions</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -214,7 +214,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">IPO - Incorporated Plan</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">IPO - Incorporated Plan</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -230,7 +230,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">LSIO - Land Subject to Inundation</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">LSIO - Land Subject to Inundation</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -246,7 +246,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">MAEO - Melbourne Airport Environs</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">MAEO - Melbourne Airport Environs</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -262,7 +262,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">NCO - Neighbourhood Character</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">NCO - Neighbourhood Character</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -278,7 +278,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">PAO - Public Acquisition</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">PAO - Public Acquisition</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -294,7 +294,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">PO - Parking</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">PO - Parking</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -316,7 +316,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">PSB - Protected Settlement Boundary</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">PSB - Protected Settlement Boundary</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -332,7 +332,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">RFO - Rural Floodway</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">RFO - Rural Floodway</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -354,7 +354,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">RO - Restructure</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">RO - Restructure</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -370,7 +370,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">RXO - Road Closure</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">RXO - Road Closure</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -392,7 +392,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">SBO - Special Building</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">SBO - Special Building</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -408,7 +408,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">SCO - Specific Controls</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">SCO - Specific Controls</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -430,7 +430,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">SLO - Significant Landscape</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">SLO - Significant Landscape</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -446,7 +446,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">SMO - Salinity Management</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">SMO - Salinity Management</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -468,7 +468,7 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">SRO - State Resource</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">SRO - State Resource</div>
 </div>
 <div>
 <div style="display:inline-block">
@@ -490,5 +490,5 @@ d="M -10,-10 L 10,0 L 10,10 L -10,10 L -10,-10 Z"></path>
 </svg></div>
 </div>
 </div>
-<div style="font-family:sans-serif;display:inline-block">VPO - Vegetation Protection</div>
+<div style="font-family:sans-serif;font-size:small;display:inline-block">VPO - Vegetation Protection</div>
 </div>
